@@ -295,8 +295,8 @@ first_pay:
   gateway_id: "a91c38c3-7d7f-4d29-acc7-927b4dca0dbe"
 
 firstdata_e4:
-  login:
-  password:
+  login: SD8821-67
+  password: T6bxSywbcccbJ19eDXNIGaCDOBg1W7T8
 
 flo2cash:
   username: SOMECREDENTIAL
