@@ -33,6 +33,7 @@
 * PayJunctionV2: Add gateway support [shasum]
 * Braintree Blue: Add Android Pay support [mrezentes]
 * BlueSnap: Update countries list [shasum]
+* NMI, FirstData: Support verify_credentials [curiousepic]
 
 == Version 1.60.0 (July 4, 2016)
 * Orbital: Fix CC num leak on profile calls [drewblas]
